@@ -76,7 +76,10 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
  * $Log$
- * Revision 1.22  2006-07-22 23:47:44  tino
+ * Revision 1.23  2006-07-26 11:58:25  tino
+ * notsock() and notfile() added
+ *
+ * Revision 1.22  2006/07/22 23:47:44  tino
  * see ChangeLog (changes for mvatom)
  *
  * Revision 1.21  2006/07/22 17:27:23  tino
@@ -225,6 +228,30 @@ tino_file_notexists(const char *name)
   if (tino_file_lstat(name, &st))
     return -1;
   return 0;
+}
+
+static int
+tino_file_notsocket(const char *name)
+{
+  tino_file_stat_t	st;
+
+  if (tino_file_lstat(name, &st))
+    return -1;
+  if (S_ISSOCK(st.st_mode))
+    return 0;
+  return 1;
+}
+
+static int
+tino_file_notfile(const char *name)
+{
+  tino_file_stat_t	st;
+
+  if (tino_file_lstat(name, &st))
+    return -1;
+  if (S_ISREG(st.st_mode))
+    return 0;
+  return 1;
 }
 
 static int
